# OpenEQA

./: .gitignore  .gitmodules  README.md
unrealzoo_gym/: README.md  generate_env_config.py  load_env.py  plot_statistic.py  pyproject.toml
unrealzoo_gym/doc/: EnvLists.md  addEnv.md  wrapper.md
unrealzoo_gym/example/: Navigation_example.py  QA_cnt.py  agent_caption.py  agent_render_test.py  depth_test.py  eqa_data.py  eqa_data_v3.py  eqa_filter_question.py  eqa_gt_gen.py  eqa_qa_gen.py  eqa_sequential_animation.py  eqa_video_collection.py  extract_state_file.py  generate_state_file.py  img_dino.py  img_picker.py  json_test.py  pick_points.py  pick_up.py  pid-stop.py  point_cloud.py  point_picker.py  point_piker.py  pointcloud.py  recoder.py  run_baseline.py  run_watch_dog.bat  run_watch_dog_1.bat  run_watch_dog_2.bat  run_watch_dog_3.bat  show_scene.py  test_scene.py  traffic_scene.py  watch_dog.py  watch_dog_updated.py  watchdog_gt_gen.py  yolo_test.py
unrealzoo_gym/example/Obj_info/: SuburbNeighborhood_Day_obj_info.json  classified_objects.json
unrealzoo_gym/example/agent_caption/: agent_cnt_features.json  img_caption.py
unrealzoo_gym/example/agent_configs_sampler/: __init__.py  advanced.md  agent_sample_agent.py  agent_sample_agent_advanced.py  agent_sampler.py  asa_event_based.py  make_graph.py  placing_prompt.py  points_sampler.py  points_sampler_cpoy.py
unrealzoo_gym/example/solution/: ._EXPRESS-Bench  model_config.json
unrealzoo_gym/gym_unrealcv/: __init__.py
unrealzoo_gym/gym_unrealcv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+568 files in other folders)
